--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="row elaman">
         <div class="col-sm-6 col-md-12">
           <div class="thumbnail">
-            <img src="http://placehold.it/1130x300/?text=aaa" alt="...">
+            <img src="" alt="yükleniyor...">
             <div class="caption">
               <h3>1</h3>
               <p></p>
@@ -89,7 +89,7 @@
         <div class="row elaman">
         <div class="col-sm-6 col-md-12">
           <div class="thumbnail">
-            <img src="http://placehold.it/1130x300/" alt="...">
+            <img src="" alt="yükleniyor...">
             <div class="caption">
               <h3>2</h3>
               <p></p>
@@ -107,7 +107,7 @@
       <div class="row elaman">
         <div class="col-sm-6 col-md-12">
           <div class="thumbnail">
-            <img src="http://placehold.it/1130x300/" alt="...">
+            <img src="" alt="yükleniyor...">
             <div class="caption">
               <h3>3</h3>
               <p></p>
@@ -125,7 +125,7 @@
       <div class="row elaman">
         <div class="col-sm-6 col-md-12">
           <div class="thumbnail">
-            <img src="http://placehold.it/1130x300/" alt="...">
+            <img src="" alt="yükleniyor...">
             <div class="caption">
               <h3>3</h3>
               <p></p>
@@ -143,7 +143,7 @@
       <div class="row elaman">
         <div class="col-sm-6 col-md-12">
           <div class="thumbnail">
-            <img src="http://placehold.it/1130x300/" alt="...">
+            <img src="" alt="yükleniyor...">
             <div class="caption">
               <h3>3</h3>
               <p></p>
