--- a/index.html
+++ b/index.html
@@ -176,37 +176,37 @@
 
     <! ------------------------------------ sub CONTENT 1 --------------------------------------------- !>
 
-      <div class="row">
+      <div class="row" id="icerikrow">
 
-        <div class="col-sm-6 col-md-4">
+        <div class=" col-md-4 col-sm-12" id="divbir">
           <div class="thumbnail">
-            <img src="http://lorempixel.com/350/289/sports/10" alt="yükleniyor..." class=" img-responsive w100" >
+            <img src="http://lorempixel.com/350/289/sports/10" alt="yükleniyor..." class=" img-responsive w100" style="cursor: pointer;" id="icerikbirresim" >
             <div class="caption">
               <h3>Thumbnail label</h3>
               <p>something something something something something something something something</p>
-              <p> <button class="btn btn-primary" role="button">Button</button> <a href="#" class="btn btn-default" role="button">Button</a></p>
+              <p> <button class="btn btn-primary" role="button" onclick="geridon()" >Buttooon</button> <a href="#" class="btn btn-default" role="button">Button</a></p>
             </div>
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4">
+        <div class=" col-md-4 col-sm-12" id="diviki">
           <div class="thumbnail">
-            <img src="http://lorempixel.com/350/289/sports/3" alt="yükleniyor..." class=" img-responsive w100">
+            <img src="http://lorempixel.com/350/289/sports/3" alt="yükleniyor..." class=" img-responsive w100" style="cursor: pointer;" id="icerikikiresim">
             <div class="caption">
               <h3>Thumbnail label</h3>
               <p>something something something something something something something something</p>
-              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+              <p><button class="btn btn-primary" role="button"  onclick="geridon()">Buttooon</button> <a href="#" class="btn btn-default" role="button">Button</a></p>
             </div>
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4">
+        <div class=" col-md-4 col-sm-12" id="divuc">
           <div class="thumbnail">
-            <img src="http://lorempixel.com/350/289/sports/2" alt="yükleniyor..." class=" img-responsive w100">
+            <img src="http://lorempixel.com/350/289/sports/2" alt="yükleniyor..." class=" img-responsive w100" style="cursor: pointer;" id="icerikucresim">
             <div class="caption">
               <h3>Thumbnail label</h3>
               <p>something something something something something something something something</p>
-              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+              <p><button href="#" class="btn btn-primary" role="button" onclick="geridon()" >Buttooon</button> <a href="#" class="btn btn-default" role="button">Button</a></p>
             </div>
           </div>
         </div>
